test img Asu1tty/blog_source@30aecb4b8602fdad8834ef14f5036953b8b95f8b

--- a/p/test/index.html
+++ b/p/test/index.html
@@ -332,6 +332,26 @@
     
     
     <p>这是一个测试文章</p>
+<p><img src="https://github.com/Asu1tty/blog_img/blob/main/picSource/20250420140100027.png?raw=true"
+	
+	
+	
+	loading="lazy"
+	
+		alt="20250420140100027.png"
+	
+	
+></p>
+<p><img src="https://raw.githubusercontent.com/Asu1tty/blog_img/main/picSource/image-20250420143310036.png"
+	
+	
+	
+	loading="lazy"
+	
+		alt="image-20250420143310036"
+	
+	
+></p>
 
 </section>
 
