Add ELFReader.MD Asu1tty/blog_source@b918cc7e8c1d8be162331c80a1b552c6b374dcd1

--- a/404.html
+++ b/404.html
@@ -43,6 +43,17 @@
 
 
 
+  
+
+  <link
+    rel="preload"
+    as="style"
+    crossorigin
+    href="https://fontsapi.zeoseven.com/448/main/result.css"
+    onload="this.rel='stylesheet'"
+  />
+
+
 
 
   
