--- a/zh-cn/404.html
+++ b/zh-cn/404.html
@@ -43,6 +43,17 @@
 
 
 
+  
+
+  <link
+    rel="preload"
+    as="style"
+    crossorigin
+    href="https://fontsapi.zeoseven.com/448/main/result.css"
+    onload="this.rel='stylesheet'"
+  />
+
+
 
 
   
