add scripts_colec.md, need to update later Asu1tty/blog_source@14d92b8cdc149c3582080751b7af4a80177b90d5

--- a/friend/index.html
+++ b/friend/index.html
@@ -202,17 +202,17 @@
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
-    <div>文章</div><div class="sidebar-state-number">14</div>
+    <div>文章</div><div class="sidebar-state-number">15</div>
   </div>
   <a class="sidebar-state-category" href="/categories/" aria-label="sidebar-state-category-link">
     <div>分类</div>
     <div class="sidebar-state-number">
-      5
+      6
     </div>
   </a>
   <a class="sidebar-state-tag" href="/tags/" aria-label="sidebar-state-tag-link">
     <div>标签</div>
-    <div class="sidebar-state-number">14</div>
+    <div class="sidebar-state-number">15</div>
   </a>
 </div>
 <div class="sidebar-social"></div>
@@ -267,6 +267,11 @@
                 <a class="category-list-link" href="/categories/crypto/" 
                   title="Crypto"
                   >Crypto</a
+                >
+              </li><li class="category-list-item">
+                <a class="category-list-link" href="/categories/scripts/" 
+                  title="Scripts"
+                  >Scripts</a
                 >
               </li><li class="category-list-item">
                 <a class="category-list-link" href="/categories/softwares/" 
@@ -444,6 +449,11 @@
             >Scoop</a
           ><a
             style="font-size:10px"
+            href="/tags/scripts/"
+            aria-label="标签: Scripts"
+            >Scripts</a
+          ><a
+            style="font-size:10px"
             href="/tags/sha-1/"
             aria-label="标签: SHA-1"
             >SHA-1</a
@@ -472,6 +482,8 @@
       <h3 class="widget-title">最新文章</h3>
       <div class="widget">
         <ul><li>
+              <a href="/post/scripts_colec/" title="脚本记录">脚本记录</a>
+            </li><li>
               <a href="/post/so-harden/" title="浅析So加固的三种方式">浅析So加固的三种方式</a>
             </li><li>
               <a href="/post/loading-so/" title="Android so加载源码分析与加壳技术">Android so加载源码分析与加壳技术</a>
@@ -479,8 +491,6 @@
               <a href="/post/elfreader/" title="ELF结构及加载流程分析">ELF结构及加载流程分析</a>
             </li><li>
               <a href="/post/xhs_analysis/" title="某红薯shield参数分析">某红薯shield参数分析</a>
-            </li><li>
-              <a href="/post/rc4/" title="RC4原理及代码实现">RC4原理及代码实现</a>
             </li></ul>
       </div>
     </div>
@@ -597,10 +607,10 @@
         >
       </div><div>
         <span class="icon-brush"
-          >&nbsp;61.0k</span
+          >&nbsp;62.6k</span
         >
         &nbsp;|&nbsp;
-        <span class="icon-coffee">&nbsp;02:08</span>
+        <span class="icon-coffee">&nbsp;02:12</span>
       </div><div>
         <span class="icon-eye"></span>
         <span id="busuanzi_container_site_pv"
@@ -634,17 +644,17 @@
 </div>
 <div class="sidebar-state">
   <div class="sidebar-state-article">
-    <div>文章</div><div class="sidebar-state-number">14</div>
+    <div>文章</div><div class="sidebar-state-number">15</div>
   </div>
   <a class="sidebar-state-category" href="/categories/" aria-label="sidebar-state-category-link">
     <div>分类</div>
     <div class="sidebar-state-number">
-      5
+      6
     </div>
   </a>
   <a class="sidebar-state-tag" href="/tags/" aria-label="sidebar-state-tag-link">
     <div>标签</div>
-    <div class="sidebar-state-number">14</div>
+    <div class="sidebar-state-number">15</div>
   </a>
 </div>
 <div class="sidebar-social"></div>
